# vscode-cpp-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  conan.deps.cmake  go.mod  main.cpp  main.go  solution.go  solution.h
src/: lib.rs  main.rs
